Add getBalance in ETH
